src/objects/Apttus_Billing__InvoiceLineItemTaxBreakup__c/Apttus_Billing__InvoiceLineItemTaxBreakup__c.object-meta.xml
<CustomObject>
    <description>Represents the tax breakup for an Invoice Line Item (which is usually based on an Order).</description>
    <label>Invoice Line Item Tax Breakup</label>
    <nameField>
        <displayFormat>ILITB-{00000000}</displayFormat>
        <label>Breakup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Item Tax Breakups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>