src/objects/Apttus_Billing__InvoiceLineItemTaxBreakup__c/fields/Apttus_Billing__InvoiceLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceLineItemId__c</fullName>
    <description>ID of the associated Invoice Line Item</description>
    <inlineHelpText>ID of the associated Invoice Line Item</inlineHelpText>
    <label>Invoice Line Item</label>
    <referenceTo>Apttus_Billing__InvoiceLineItem__c</referenceTo>
    <relationshipLabel>Invoice Line Item Tax Breakups</relationshipLabel>
    <relationshipName>InvoiceLineItemTaxBreakups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>