src/objects/Apttus_Billing__InvoiceLineItemTaxBreakup__c/fields/mwst__c.field-meta.xml
<CustomField>
    <fullName>mwst__c</fullName>
    <label>mwst</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>