src/objects/Apttus_Billing__InvoiceLineItemTaxBreakup__c/fields/xr1__c.field-meta.xml
<CustomField>
    <fullName>xr1__c</fullName>
    <label>xr1</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>