src/objects/Apttus_Billing__InvoiceLineItemTaxBreakup__c/fields/xr2__c.field-meta.xml
<CustomField>
    <fullName>xr2__c</fullName>
    <label>xr2</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>