src/objects/Apttus_Billing__InvoiceLineItemTaxBreakup__c/fields/xr3__c.field-meta.xml
<CustomField>
    <fullName>xr3__c</fullName>
    <label>xr3</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>